// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get moderation action view gets moderation report for a record. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "id": 2,
  "reason": "defamation",
  "reasonType": "com.atproto.moderation.defs#reasonOther",
  "reportedBy": "user(0)",
  "resolvedByActions": Array [
    Object {
      "action": "com.atproto.admin.defs#takedown",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 3,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
      ],
      "subject": Object {
        "$type": "com.atproto.repo.strongRef",
        "cid": "cids(0)",
        "uri": "record(0)",
      },
      "subjectBlobCids": Array [],
    },
    Object {
      "action": "com.atproto.admin.defs#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 2,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "reversal": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "reason": "X",
      },
      "subject": Object {
        "$type": "com.atproto.admin.defs#repoRef",
        "did": "user(1)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "subject": Object {
    "$type": "com.atproto.admin.defs#recordView",
    "blobCids": Array [],
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {
      "currentAction": Object {
        "action": "com.atproto.admin.defs#takedown",
        "id": 3,
      },
    },
    "repo": Object {
      "account": Object {
        "email": "alice@test.com",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "moderation": Object {},
      "relatedRecords": Array [
        Object {
          "$type": "app.bsky.actor.profile",
          "avatar": Object {
            "$type": "blob",
            "mimeType": "image/jpeg",
            "ref": Object {
              "$link": "cids(1)",
            },
            "size": 3976,
          },
          "description": "its me!",
          "displayName": "ali",
        },
      ],
    },
    "uri": "record(0)",
    "value": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
  },
}
`;

exports[`pds admin get moderation action view gets moderation report for a repo. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "id": 1,
  "reasonType": "com.atproto.moderation.defs#reasonSpam",
  "reportedBy": "user(0)",
  "resolvedByActions": Array [
    Object {
      "action": "com.atproto.admin.defs#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 2,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "reversal": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "reason": "X",
      },
      "subject": Object {
        "$type": "com.atproto.admin.defs#repoRef",
        "did": "user(1)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoView",
    "account": Object {
      "email": "alice@test.com",
    },
    "did": "user(1)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
      },
    ],
  },
}
`;
